# selinux

./: config.h.in  meson.build  meson_options.txt
libselinux/: meson.build
libselinux/include/: meson.build
libselinux/include/selinux/: meson.build
libselinux/src/: label_file.c  meson.build  regex-stubs.c  regex.h  selinux_restorecon.c  seusers.c
libselinux/vapi/: meson.build
libsepol/include/: meson.build
libsepol/include/sepol/: meson.build
libsepol/include/sepol/policydb/: meson.build
libsepol/src/: android_m_compat.c  meson.build  write.c
