headers = [
  'boolean_record.h',
  'booleans.h',
  'context.h',
  'context_record.h',
  'debug.h',
  'errcodes.h',
  'handle.h',
  'ibendport_record.h',
  'ibendports.h',
  'ibpkey_record.h',
  'ibpkeys.h',
  'iface_record.h',
  'interfaces.h',
  'kernel_to_cil.h',
  'kernel_to_conf.h',
  'module.h',
  'module_to_cil.h',
  'node_record.h',
  'nodes.h',
  'policydb.h',
  'port_record.h',
  'ports.h',
  'roles.h',
  'sepol.h',
  'user_record.h',
  'users.h',
]

install_headers(headers, subdir: 'sepol')

subdir('policydb')
