headers = [
  'avrule_block.h',
  'avtab.h',
  'conditional.h',
  'constraint.h',
  'context.h',
  'ebitmap.h',
  'expand.h',
  'flask_types.h',
  'hashtab.h',
  'hierarchy.h',
  'link.h',
  'mls_types.h',
  'module.h',
  'polcaps.h',
  'policydb.h',
  'services.h',
  'sidtab.h',
  'symtab.h',
  'util.h',
]

install_headers(headers, subdir: 'sepol' / 'policydb')
